# rover_nav

./: CMakeLists.txt  README.md  bgp_plugin.xml  package.xml
cfg/: planner.cfg  planner_config.cfg
config/elevation_maps/: simple_demo_map.yaml  simple_demo_robot.yaml
config/grid_map/: filters.yaml  parameters.yaml
config/move_base/: base_local_planner_params.yaml  common_costmap_params.yaml  costmap_common_params.yaml  costmap_common_params_3d.yaml  global_costmap.yaml  local_costmap.yaml  nav_3d_costmap_params.yaml
data/: mars_yard_map.pcd
include/: planner_3d.h
launch/: elevation_map.launch  elevation_map_hardware.launch  filter_tuner.launch  hardware_2D_nav.launch  move_base.launch  octo_hardware.launch  octo_mapping.launch  planner_tuner.launch  sim_2D_nav.launch  sim_3D_nav.launch  sim_nav.launch
rviz/: elevation_map_visualization.rviz  filters.rviz  octomap_hardware.rviz  octomap_sim.rviz  planner_tunning.rviz
scripts/: a_star.py  dataset_parser.py  goal_publisher.py  ground_truth_pose_publisher.py  map_pub.py
src/: planner_3D.cpp  planner_3d.cpp  planner_tuner.cpp
