<?xml version="1.0"?>
<package format="2">
  <name>rover_nav</name>
  <version>0.1.0</version>
  <description>MarsWorks navigation package.</description>
  <maintainer email="mkmtaher1@sheffield.ac.uk">Marwan Taher</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>grid_map_ros</depend>
  <depend>grid_map_rviz_plugin</depend>
  <depend>rviz</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>octomap_server</depend>
</package>
