<?xml version="1.0"?>
<package format="2">
  <name>rover_nav</name>
  <version>0.1.0</version>
  <description>MarsWorks navigation package.</description>
  <maintainer email="mkmtaher1@sheffield.ac.uk">Marwan Taher</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>base_local_planner</depend>
  <depend>costmap_2d</depend>
  <depend>eigen</depend>
  <depend>nav_core</depend>
  <depend>pluginlib</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <depend>grid_map</depend>
  <depend>rviz</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>octomap_server</depend>

  <export>
        <nav_core plugin="${prefix}/bgp_plugin.xml" />
  </export>

</package>
